# recode-engine

./: .gitignore  CHANGELOG.md  README.md  analyze_code.bat  analyze_code.sh  poc.recipe.yaml  pyproject.toml  requirements-analyze.txt  requirements-documentation.txt
docs/: sphinx-full-rebuild.bat  sphinx-full-rebuild.sh  sphinx-patch-conf.py
src/recode-engine/: __main__ copy.py  __main__.py  container.py  logic.py  processor.py  recipe.py  step.py  utils.py
